# MA385_SDL2_Visualizer

./: .gitignore  2DGraph.cpp  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
include/mine/: camera.hpp  cameraHandler.hpp  enums.hpp  function.hpp  gui.hpp  guiHandler.hpp  imguiHandler.hpp  pipeline.hpp  plot.hpp  vectorHandler.hpp  vertexHandler.hpp
shaders/: compute.glsl  fragment.glsl  vertex.glsl
src/: main.cpp
src/mine/: camera.cpp  cameraHandler.cpp  function.cpp  gui.cpp  guiHandler.cpp  pipeline.cpp  plot.cpp  vectorHandler.cpp  vertexHandler.cpp
